tests/negative/neg_pr1112d_shared_root_mut_actual.safe
package neg_pr1112d_shared_root_mut_actual

   function grow (items : mut list of integer)
      append (items, 1);

   shared values : list of integer;

   function update
      grow (values);
